# notebooker

./: .gitmodules  Jenkinsfile  Jenkinsfile-27-3  Jenkinsfile-36-1  Jenkinsfile.regression  README.md  setup-legacy.cfg  setup.cfg  setup.py  setup_notebooker_env.sh
docker/: .gitignore  Dockerfile  default_image_name  install_datascience.sh  install_kernel.sh  install_latex.sh  install_man_notebooker.sh  install_node.sh  install_pandoc.sh
docker-27-3/: Dockerfile  build.sh  default_image_name  install_node.sh  install_yum_dependencies.sh
docker-36-1/: Dockerfile  install_man_notebooker.sh  install_yum_dependencies.sh
idi/datascience/one_click_notebooks/: caching.py  handle_overrides.py  main.py  report_hunter.py  results.py  scratch.py  tasks.py  utils.py
idi/datascience/one_click_notebooks/notebook_templates/: README.md  wootchdoog_chacks.py
idi/datascience/one_click_notebooks/static/: header.js  loading.js  one_click_notebooks.css  run_report.js
idi/datascience/one_click_notebooks/templates/: header.html  index.html  loading.html  results.html  run_report.html
man/: __init__.py
man/notebooker/: caching.py  constants.py  convert_to_py.py  docker_compose_entrypoint.py  exceptions.py  execute_notebook.py  handle_overrides.py  main.py  report_hunter.py  results.py  scratch.py  snapshot.py  tasks.py  utils.py
man/notebooker/notebook_templates/: README.md  __init__.py  secmaster_coverage_analysis.py  watchdog_checks.py
man/notebooker/serialization/: mongo.py  mongoose.py  serialization.py  serializers.py
man/notebooker/static/: header.js  index.js  loading.css  loading.js  loading.scss  one_click_notebooks.css  run_report.js
man/notebooker/templates/: header.html  index.html  loading.html  results.html  run_report.html
man/notebooker/utils/: caching.py  conversion.py  mail.py  notebook_execution.py  results.py  template_sanity_checking.py  template_testing.py  templates.py  testing.py  web.py
man/notebooker/web/: handle_overrides.py  main.py  report_hunter.py
man/notebooker/web/routes/: core.py  prometheus.py  run_report.py  serve_results.py
man/notebooker/web/static/: .npmrc  header.js  iframe_loading.js  index.js  loading.js  one_click_notebooks.css  package.json  run_report.js  semantic.json
man/notebooker/web/static/notebooker/: header.js  index.js
man/notebooker/web/templates/: header.html  index.html  loading.html  notebooker_html_output.tpl  notebooker_pdf_output.tplx  results.html  run_report.html
notebook_templates/: README.md  get_timeseries_example.py  notebook_requirements.txt  plot_random_data.py  secmaster_coverage_analysis.py  test_plotly.py
notebook_templates/ahl_secret_examples/: get_timeseries_example.py
notebook_templates/data_science/: CoverageAnalysis.py  IndexAnalysis.py  secmaster_coverage_analysis.py  watchdog_checks.py
notebook_templates/pm/monitoring/: cpm_dpm_overview.py  market_participation.py  market_posbounds.py  max_orders.py  overall_participation.py  overall_posbounds.py  short_sample_periods.py  slims.py  strategy_volatility.py
notebook_templates/pm/queries/: impact_of_mac_allocation_change.py  product_risk_allocation.py
notebook_templates/reporting/: SYSC.py
notebook_templates/risk/: 20190531_Counterparty.py  SDR_Credit_Analysis.py
notebooker_extension/: bundler.py
tests/: utils.py
tests/integration/: conftest.py  test_e2e.py  test_execute_notebook.py  test_handle_overrides.py  test_report_hunter.py
tests/integration/one_click_notebooks/: test_handle_overrides.py  test_report_hunter.py
tests/regression/: test_execute_templates.py
tests/sanity/: test_template_sanity.py
tests/unit/: test_execute_notebook.py  test_handle_overrides.py  test_run_report.py  test_snapshot.py  test_utils_notebook_execution.py  test_utils_web.py
tests/unit/one_click_notebooks/: test_handle_overrides.py
tests/unit/serialization/: test_mongoose.py
tests/unit/utils/: test_conversion.py  test_mail.py  test_results.py  test_templates.py  test_utils_notebook_execution.py  test_utils_web.py
