[egg_info]
tag_build = .dev1

[pytest]
python_functions = test should
timeout = 600
norecursedirs = .svn *.egg

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[entry_points]
console_scripts =
    man_notebooker_webapp = man.notebooker.main:start_app

[metadata]
name = man.notebooker
author = AHL Data Science
author_email = AHLDataScience@man.com
setup_requires =
	numpy
install_requires =
	docopt
    pandas
    requests
    flask
    pymongo
    papermill
    nbconvert
    nbformat
    jupytext
    seaborn
    matplotlib
    ahl.core
    ahl.core[spark]
    ahl.marketdata
    ahl.logging
    ahl.signals
    equities.core
    intervaltree
    tqdm
    man.secmaster
    pytz
    ipykernel
    idi.datascience
tests_require =
	openpyxl
    pytest
    pandas
    mock
	pytest-cov
	pytest-timeout
	pytest-xdist
    ahl.testing
    freezegun
    hypothesis>=3.83.2

version = 1.0.0

keywords =
classifiers =
	Programming Language :: Python
	Framework :: Pylons
	Topic :: Software Development :: Libraries
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
description = A library which parametrises and runs notebooks on-demand.
