[egg_info]
tag_build = .dev1

[tool:pytest]
python_functions = test should
timeout = 600
norecursedirs = .svn *.egg

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[entry_points]
console_scripts =
    man_notebooker_webapp = man.notebooker.web.main:main
    man_execute_notebook = man.notebooker.execute_notebook:docker_compose_entrypoint
    convert_ipynb_to_py = man.notebooker.convert_to_py:main

[metadata]
name = man.notebooker
author = AHL Data Science
author_email = AHLDataScience@man.com
setup_requires =
	numpy
install_requires =
	docopt
    pandas
    requests
    flask
    pymongo
    papermill
    nbconvert
    nbformat
    jupytext
    ahl.core
    ahl.logging
    backports.shutil_get_terminal_size
    ipykernel
    gitpython
    typing
    tables
    stashy
#tests_require is in setup.py

version = 1.0.0

keywords =
classifiers =
	Programming Language :: Python
	Framework :: Pylons
	Topic :: Software Development :: Libraries
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
description = A library which parametrises and runs notebooks on-demand.
