[egg_info]
tag_build = .dev1

[tool:pytest]
python_functions = test should
timeout = 600
norecursedirs = .svn *.egg

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[entry_points]
console_scripts =
    man_notebooker_webapp = man.notebooker.web.main:main
    man_execute_notebook = man.notebooker.execute_notebook:docker_compose_entrypoint
    notebooker_template_sanity_check = man.notebooker.utils.template_testing:sanity_check
    notebooker_template_regression_test = man.notebooker.utils.template_testing:regression_test
    convert_ipynb_to_py = man.notebooker.convert_to_py:main
    snapshot_latest_successful_notebooks = man.notebooker.snapshot:snapshot_latest_successful_notebooks

[metadata]
name = man.notebooker
author = AHL Data Science
author_email = AHLDataScience@man.com
setup_requires =
	numpy
    six
install_requires =
	docopt
    gevent
    pandas
    matplotlib
    pymongo
    papermill
    nbconvert
    nbformat
    jupytext
    arctic
    backports.shutil_get_terminal_size
    ipykernel
    typing
    tables
    stashy
    click
    six
    python-dateutil
    flask
    requests
    gitpython
extras_require =
    mongoose: man.core
tests_require =
    openpyxl
    pytest
    mock
    pytest-cov
    pytest-timeout
    pytest-xdist
    ahl.testing
    freezegun
    hypothesis>=3.83.2

version = 1.0.0

keywords =
classifiers =
	Programming Language :: Python
	Framework :: Pylons
	Topic :: Software Development :: Libraries
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
description = A library which parametrises and runs notebooks on-demand.
